refactor: change $border-radius to $border-radius-md in default theme

--- a/packages/default/scss/_variables.scss
+++ b/packages/default/scss/_variables.scss
@@ -364,7 +364,7 @@ $invalid-shadow: null !default;
 $drag-clue-padding-x: $padding-x !default;
 $drag-clue-padding-y: $padding-y !default;
 $drag-clue-border-width: 1px !default;
-$drag-clue-border-radius: $border-radius !default;
+$drag-clue-border-radius: $border-radius-md !default;
 $drag-clue-font-size: $font-size !default;
 $drag-clue-font-family: $font-family !default;
 $drag-clue-line-height: $line-height !default;
