--- a/packages/default/scss/badge/_variables.scss
+++ b/packages/default/scss/badge/_variables.scss
@@ -2,7 +2,7 @@
 $badge-padding-x: $padding-x-sm !default;
 $badge-padding-y: $badge-padding-x !default;
 $badge-border-width: 1px !default;
-$badge-border-radius: $border-radius !default;
+$badge-border-radius: $border-radius-md !default;
 $badge-font-size: $font-size-xs !default;
 $badge-line-height: 1 !default;
 
