--- a/packages/default/scss/loader/_variables.scss
+++ b/packages/default/scss/loader/_variables.scss
@@ -27,7 +27,7 @@ $loader-secondary-bg: #656565 !default;
 $loader-container-panel-border-width: 1px !default;
 $loader-container-panel-border-style: solid !default;
 $loader-container-panel-border-color: $component-border !default;
-$loader-container-panel-border-radius: $border-radius !default;
+$loader-container-panel-border-radius: $border-radius-md !default;
 $loader-container-panel-bg: $white !default;
 
 $loader-container-padding-sm: map-get( $spacing, 4 ) !default;
