--- a/packages/default/scss/skeleton/_variables.scss
+++ b/packages/default/scss/skeleton/_variables.scss
@@ -1,6 +1,6 @@
 // Skeleton
 $skeleton-text-transform: scale( 1, .6 ) !default;
-$skeleton-text-border-radius: $border-radius !default;
+$skeleton-text-border-radius: $border-radius-md !default;
 
 $skeleton-rect-border-radius: 0 !default;
 
