--- a/packages/default/scss/tabstrip/_variables.scss
+++ b/packages/default/scss/tabstrip/_variables.scss
@@ -33,7 +33,7 @@ $tabstrip-item-padding-y: $nav-item-padding-y !default;
 $tabstrip-item-border-width: 1px !default;
 /// Border radius of tabs
 /// @group tabstrip
-$tabstrip-item-border-radius: $border-radius !default;
+$tabstrip-item-border-radius: $border-radius-md !default;
 /// Spacing between tabs
 /// @group tabstrip
 $tabstrip-item-gap: $nav-item-margin !default;
