--- a/packages/default/scss/fab/_variables.scss
+++ b/packages/default/scss/fab/_variables.scss
@@ -5,7 +5,7 @@
 $kendo-fab-border-width: 1px !default;
 /// Border radius of the FAB.
 /// @group floating-action-button
-$kendo-fab-border-radius: $border-radius !default;
+$kendo-fab-border-radius: $border-radius-md !default;
 
 /// Font family of the FAB.
 /// @group floating-action-button
