--- a/packages/default/scss/listgroup/_variables.scss
+++ b/packages/default/scss/listgroup/_variables.scss
@@ -1,6 +1,6 @@
 // Listgroup
 $listgroup-border-width: 1px !default;
-$listgroup-border-radius: $border-radius !default;
+$listgroup-border-radius: $border-radius-md !default;
 
 $listgroup-font-size: $font-size !default;
 $listgroup-line-height: $line-height !default;
