--- a/packages/default/scss/popup/_layout.scss
+++ b/packages/default/scss/popup/_layout.scss
@@ -19,7 +19,7 @@
         }
     }
     .k-animation-container {
-        @include border-bottom-radius-only( $border-radius );
+        @include border-bottom-radius-only( $border-radius-md );
 
         .k-popup {}
     }
