--- a/packages/default/scss/taskboard/_variables.scss
+++ b/packages/default/scss/taskboard/_variables.scss
@@ -26,7 +26,7 @@ $taskboard-columns-container-gap: $taskboard-spacer !default;
 
 $taskboard-column-width: 320px !default;
 $taskboard-column-border-width: 1px !default;
-$taskboard-column-border-radius: $border-radius !default;
+$taskboard-column-border-radius: $border-radius-md !default;
 $taskboard-column-bg: $base-bg !default;
 $taskboard-column-text: null !default;
 $taskboard-column-border: transparent !default;
@@ -68,7 +68,7 @@ $taskboard-pane-actions-padding-x: $taskboard-spacer !default;
 $taskboard-card-padding-y: $taskboard-spacer !default;
 $taskboard-card-padding-x: $taskboard-card-padding-y !default;
 $taskboard-card-border-width: $card-border-width !default;
-$taskboard-card-border-radius: $border-radius !default;
+$taskboard-card-border-radius: $border-radius-md !default;
 $taskboard-card-shadow: $card-shadow !default;
 $taskboard-card-bg: $card-bg !default;
 $taskboard-card-text: $card-text !default;
