--- a/packages/default/scss/timeline/_layout.scss
+++ b/packages/default/scss/timeline/_layout.scss
@@ -32,7 +32,7 @@
             display: inline-block;
             text-align: center;
             padding: $timeline-flag-padding-y $timeline-flag-padding-x;
-            border-radius: $border-radius;
+            border-radius: $border-radius-md;
             line-height: $timeline-flag-line-height;
             min-width: $timeline-flag-min-width;
             max-width: $timeline-flag-max-width;
@@ -96,7 +96,7 @@
                 }
 
                 &::-webkit-scrollbar-thumb {
-                    border-radius: $border-radius;
+                    border-radius: $border-radius-md;
                 }
             }
         }
