feat(gantt): add dependency validation tooltip styles
https://github.com/telerik/kendo-themes/issues/3163

--- a/packages/bootstrap/scss/gantt/_variables.scss
+++ b/packages/bootstrap/scss/gantt/_variables.scss
@@ -85,3 +85,8 @@ $gantt-advanced-bg-lighter: tint($gantt-advanced-bg, 5) !default;
 
 $gantt-action-on-offset-text: #000000 !default;
 $gantt-offset-resize-handler-top: 45% !default;
+
+$gantt-validation-tooltip-width: 200px !default;
+$gantt-validation-tooltip-border: #656565 !default;
+$gantt-validation-tooltip-valid-border: $success !default;
+$gantt-validation-tooltip-invalid-border: $error !default;
