--- a/packages/default/scss/gantt/_theme.scss
+++ b/packages/default/scss/gantt/_theme.scss
@@ -244,7 +244,6 @@
     }
 
     // Tooltips
-
     .k-offset-tooltip-delayed {
         @include fill(
             $bg: $gantt-delayed-bg
@@ -255,5 +254,21 @@
         @include fill(
             $bg: $gantt-planned-bg
         );
+    }
+
+    .k-gantt-tooltip-validation {
+        &::before {
+            background-color: $gantt-validation-tooltip-border;
+        }
+    }
+    .k-gantt-tooltip-valid {
+        &::before {
+            background-color: $gantt-validation-tooltip-valid-border;
+        }
+    }
+    .k-gantt-tooltip-invalid {
+        &::before {
+            background-color: $gantt-validation-tooltip-invalid-border;
+        }
     }
 }
