fix(chip): fix cut text at bottom of chip

--- a/packages/default/scss/chip/_layout.scss
+++ b/packages/default/scss/chip/_layout.scss
@@ -33,6 +33,8 @@
 
     // Chip content
     .k-chip-content {
+        padding: .5em 0;
+        margin: -.5em 0;
         min-width: 0;
         display: flex;
         flex-flow: row nowrap;
