chore: fix lint warnings

--- a/packages/default/scss/gantt/_layout.scss
+++ b/packages/default/scss/gantt/_layout.scss
@@ -716,7 +716,7 @@
         display: block;
 
         &::before {
-            content: '';
+            content: "";
             width: 4px;
             height: 100%;
             position: absolute;
