--- a/packages/default/scss/common/_loading.scss
+++ b/packages/default/scss/common/_loading.scss
@@ -21,7 +21,7 @@
     }
 
     .k-loading-mask {
-        z-index: 100;
+        z-index: $zindex-loading;
 
         &.k-opaque {
             .k-loading-color {
@@ -33,13 +33,15 @@
         text-indent: -4000px;
         text-align: center;
         position: absolute;
+        color: $loading-text;
     }
     .k-loading-image {
         z-index: 2;
+        color: $loading-text;
     }
     .k-loading-color {
-        background-color: $component-bg;
-        opacity: .3;
+        background-color: $loading-bg;
+        opacity: $loading-opacity;
     }
 
     // Loading indicator
@@ -47,7 +49,7 @@
         position: relative;
         background-color: transparent;
         box-sizing: border-box;
-        color: currentColor;
+        color: $loading-text;
 
         &::before,
         &::after {
