fix(dropdowntree): wrong padding of the check-all element
https://github.com/telerik/kendo-themes/issues/3398

--- a/packages/default/scss/dropdowntree/_layout.scss
+++ b/packages/default/scss/dropdowntree/_layout.scss
@@ -8,7 +8,7 @@
         padding: 0;
 
         .k-check-all {
-            padding: $dropdowntree-popup-padding-y $dropdowntree-popup-padding-x;
+            padding: $dropdowntree-popup-padding-y $dropdowntree-popup-padding-x 0;
         }
 
         .k-treeview {
