fix(chip): add box-shadow none on focus

--- a/packages/material/scss/chip/_theme.scss
+++ b/packages/material/scss/chip/_theme.scss
@@ -24,6 +24,12 @@
                     $color: $color
                 );
             }
+
+            &:focus,
+            &.k-focus {
+                @include box-shadow( none );
+            }
+
         }
     }
 
