fix(dropdowngrid): reset data table border width in popup

--- a/packages/default/scss/dropdowngrid/_layout.scss
+++ b/packages/default/scss/dropdowngrid/_layout.scss
@@ -1,10 +1,14 @@
 @include exports("dropdowngrid/layout") {
 
-    // Dropdown grid
+    // DropdownGrid
     .k-dropdown-grid {}
 
+    // DropdowGrid Popup
     .k-dropdowngrid-popup {
         overflow: hidden;
+    }
+    .k-dropdowngrid-popup > .k-data-table {
+        border-width: 0;
     }
 
 }
