fix(input): hover shadow variables not present in the code
https://github.com/telerik/kendo-themes/issues/3436

--- a/packages/default/scss/input/_theme.scss
+++ b/packages/default/scss/input/_theme.scss
@@ -16,6 +16,7 @@
                 $kendo-input-hover-bg,
                 $kendo-input-hover-border
             );
+            @include box-shadow( $kendo-input-hover-shadow );
         }
 
         // Focus
@@ -90,6 +91,7 @@
                 $kendo-picker-hover-border,
                 $kendo-picker-hover-gradient
             );
+            @include box-shadow( $kendo-picker-hover-shadow );
         }
 
         // Focus
