--- a/packages/default/scss/grid/_layout.scss
+++ b/packages/default/scss/grid/_layout.scss
@@ -655,7 +655,7 @@
             }
         }
 
-        .k-header > .k-link > .k-icon {
+        .k-cell-inner > .k-link > .k-icon {
             &.k-i-sort-desc-sm,
             &.k-i-sort-asc-sm {
                 vertical-align: text-top;
