--- a/packages/material/scss/button/_variables.scss
+++ b/packages/material/scss/button/_variables.scss
@@ -148,6 +148,9 @@ $kendo-button-focus-gradient: null !default;
 /// The base shadow of focused buttons.
 /// @group button
 $kendo-button-focus-shadow: null !default;
+/// The base shadow of focused button in button group
+/// @group button
+$kendo-button-group-focus-shadow: null !default;
 
 /// The base background color of disabled button.
 /// @group button
