fix(actionsheet): use subtle text variable for description styling

--- a/packages/default/scss/action-sheet/_theme.scss
+++ b/packages/default/scss/action-sheet/_theme.scss
@@ -31,6 +31,12 @@
     .k-actionsheet-item {}
 
 
+    // Actionsheet item description
+    .k-actionsheet-item-description {
+        @include fill( $color: $actionsheet-item-description-text );
+    }
+
+
     // Actionsheet action
     .k-actionsheet-action {
 
