--- a/packages/default/scss/expansion-panel/_theme.scss
+++ b/packages/default/scss/expansion-panel/_theme.scss
@@ -37,6 +37,6 @@
     }
 
     .k-expander-sub-title {
-        opacity: $expander-header-sub-title-opacity;
+        color: $expander-header-sub-title-text;
     }
 }
