--- a/packages/material/scss/expansion-panel/_variables.scss
+++ b/packages/material/scss/expansion-panel/_variables.scss
@@ -27,7 +27,7 @@ $expander-header-focused-shadow: none !default;
 
 $expander-title-text: $secondary !default;
 
-$expander-header-sub-title-opacity: .62 !default;
+$expander-header-sub-title-text: $subtle-text !default;
 
 $expander-content-padding-x: $padding-x * 1.5 !default;
 $expander-content-padding-y: $padding-y * 6 !default;
