--- a/packages/bootstrap/scss/expansion-panel/_variables.scss
+++ b/packages/bootstrap/scss/expansion-panel/_variables.scss
@@ -27,7 +27,7 @@ $expander-header-focused-shadow: $kendo-list-item-focus-shadow !default;
 
 $expander-title-text: $primary !default;
 
-$expander-header-sub-title-opacity: .5 !default;
+$expander-header-sub-title-text: $subtle-text !default;
 
 $expander-content-padding-x: $padding-x-lg !default;
 $expander-content-padding-y: $expander-content-padding-x !default;
