--- a/packages/material/scss/floating-label/_variables.scss
+++ b/packages/material/scss/floating-label/_variables.scss
@@ -3,11 +3,11 @@ $floating-label-scale: 1 !default;
 $floating-label-font-size: $kendo-input-font-size !default;
 $floating-label-line-height: $kendo-input-line-height !default;
 $floating-label-height: calc( #{$floating-label-line-height} * #{$floating-label-font-size} ) !default;
-$floating-label-offset-x: null !default;
+$floating-label-offset-x: calc( #{$kendo-input-padding-x} + #{$kendo-input-border-width} ) !default;
 $floating-label-offset-y: calc( #{$floating-label-height} + #{$kendo-input-border-width} + #{$kendo-input-padding-y} ) !default;
 
 $floating-label-focus-scale: .75 !default;
-$floating-label-focus-offset-x: null !default;
+$floating-label-focus-offset-x: 0px !default;
 $floating-label-focus-offset-y: 0px !default;
 
 $floating-label-transition: .15s cubic-bezier( .4, 0, .2, 1 ) !default;
