fix(colorgradient): use subtle text variable for input labels

--- a/packages/default/scss/colorgradient/_variables.scss
+++ b/packages/default/scss/colorgradient/_variables.scss
@@ -45,7 +45,7 @@ $colorgradient-canvas-draghandle-margin-x: -( $colorgradient-draghandle-width / 
 $colorgradient-input-width: 46px !default;
 $colorgradient-input-gap: ( $colorgradient-spacer / 1.5 ) !default;
 $colorgradient-input-label-gap: ( $colorgradient-spacer / 3 ) !default;
-$colorgradient-input-label-text: $disabled-text !default;
+$colorgradient-input-label-text: $subtle-text !default;
 
 $colorgradient-contrast-ratio-font-weight: $font-weight-bold !default;
 $colorgradient-contrast-spacer: ( $colorgradient-spacer / 1.5 ) !default;
