--- a/packages/bootstrap/scss/colorgradient/_variables.scss
+++ b/packages/bootstrap/scss/colorgradient/_variables.scss
@@ -45,7 +45,7 @@ $colorgradient-canvas-draghandle-margin-x: -( $colorgradient-draghandle-width / 
 $colorgradient-input-width: 56px !default;
 $colorgradient-input-gap: ( $colorgradient-spacer / 2 ) !default;
 $colorgradient-input-label-gap: map-get( $spacing, 1 ) !default;
-$colorgradient-input-label-text: $disabled-text !default;
+$colorgradient-input-label-text: $subtle-text !default;
 
 $colorgradient-contrast-ratio-font-weight: $font-weight-bold !default;
 $colorgradient-contrast-spacer: ( $colorgradient-spacer / 2 ) !default;
