--- a/packages/classic/scss/input/_variables.scss
+++ b/packages/classic/scss/input/_variables.scss
@@ -136,6 +136,10 @@ $kendo-picker-flat-focus-text: null !default;
 $kendo-picker-flat-focus-border: null !default;
 $kendo-picker-flat-focus-shadow: null !default;
 
+$kendo-picker-outline-hover-bg: null !default;
+$kendo-picker-outline-hover-text: null !default;
+$kendo-picker-outline-hover-border: null !default;
+
 $kendo-input-placeholder-text: $subtle-text !default;
 $kendo-input-placeholder-opacity: 1 !default;
 
