--- a/packages/default/scss/input/_layout.scss
+++ b/packages/default/scss/input/_layout.scss
@@ -349,8 +349,7 @@
         }
     }
 
-    .k-input-outline,
-    .k-picker-outline {
+    .k-input-outline {
         background: none !important; // sass-lint:disable-line no-important
     }
 
