fix(input): give flat input and picker border-radius on focus to match design

--- a/packages/bootstrap/scss/input/_variables.scss
+++ b/packages/bootstrap/scss/input/_variables.scss
@@ -81,6 +81,8 @@ $kendo-input-outline-bg: null !default;
 $kendo-input-outline-text: $base-text !default;
 $kendo-input-outline-border: rgba( $base-text, .5 ) !default;
 
+$kendo-input-flat-border-radius: 4px 4px 0px 0px !default;
+
 $kendo-picker-bg: $kendo-button-bg !default;
 $kendo-picker-text: $kendo-button-text !default;
 $kendo-picker-border: $kendo-button-border !default;
