--- a/packages/classic/scss/input/_variables.scss
+++ b/packages/classic/scss/input/_variables.scss
@@ -91,6 +91,8 @@ $kendo-input-flat-focus-border: null !default;
 
 $kendo-input-flat-border-radius: 4px 4px 0px 0px !default;
 
+$kendo-input-flat-border-radius: null !default;
+
 $kendo-picker-bg: $kendo-button-bg !default;
 $kendo-picker-text: $kendo-button-text !default;
 $kendo-picker-border: $kendo-button-border !default;
