--- a/packages/material/scss/input/_variables.scss
+++ b/packages/material/scss/input/_variables.scss
@@ -81,6 +81,8 @@ $kendo-input-outline-bg: null !default;
 $kendo-input-outline-text: null !default;
 $kendo-input-outline-border: null !default;
 
+$kendo-input-flat-border-radius: null !default;
+
 $kendo-picker-bg: $kendo-input-bg !default;
 $kendo-picker-text: $kendo-input-text !default;
 $kendo-picker-border: $kendo-input-border !default;
